--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-login=root:12345@tcp(localhost:3306)/repopatterngin?parseTime=true&charset=utf8mb4
+login=root:root@tcp(localhost:3306)/repopatterngin?parseTime=true&charset=utf8mb4
